--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   },
   "homepage": "https://github.com/Yfatou/eatDaBurger#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.12",
+    "method-override": "^3.0.0",
     "mysql": "^2.16.0",
-    "node": "^11.7.0"
+    "node": "^11.7.0",
+    "path": "^0.12.7"
   }
 }
